# spacy-llm

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  api.md  download.py  download_x.py  migration_guide.md  pyproject.toml  requirements-dev-no-deps.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cibuildwheel.yml  explosionbot.yml  external.yml  gpu.yml  publish_pypi.yml  test.yml  test_external.yml  test_gpu.yml  validate.yml
spacy_llm/: __init__.py  api.py  cache.py  compat.py  errors.py  factories.py  faq.md  ty.py  util.py
spacy_llm/api/: __init__.py  api_langchain.py  api_minichain.py  langchain.py  minichain.py  promptable.py
spacy_llm/backends/: __init__.py  dolly.py  hf.py  huggingface.py  langchain.py  minichain.py
spacy_llm/backends/hf/: __init__.py  dolly.py  util.py
spacy_llm/backends/integration/: __init__.py  base.py  dolly.py  langchain.py  minichain.py  openllama.py  stablelm.py
spacy_llm/catalogue/: __init__.py  api.py  prompt.py  task.py
spacy_llm/dummy/: __init__.py  dummy.py
spacy_llm/models/: __init__.py
spacy_llm/pipeline/: __init__.py  llm.py  prompts.py  remote.py
spacy_llm/registry/: __init__.py  api.py  backend.py  ner.py  normalizer.py  parse.py  prompt.py  reader.py  task.py  template.py  util.py
spacy_llm/tasks/: __init__.py  builtin_task.py  entity_linker.py  entity_linking.py  lemma.py  ner.py  noop.py  rel.py  sentiment.py  span.py  spancat.py  srl_task.py  summarization.py  textcat.py
spacy_llm/tests/: compat.py  conftest.py  test.py  test_cache.py  test_combinations.py  test_dummy.py  test_llm.py  test_registry.py
usage_examples/: README.md  dolly_ner_fewshot.cfg  dolly_ner_zeroshot.cfg  openai_textcat_fewshot.cfg  openai_textcat_zeroshot.cfg
usage_examples/el_openai/: README.md  el_kb_data.yml  examples.yml  fewshot.cfg  run_pipeline.py  zeroshot.cfg
usage_examples/multitask_openai/: README.md  examples.yml  fewshot.cfg  openai_multitask_fewshot.cfg  openai_multitask_zeroshot.cfg  run_multitask_openai_pipeline.py  run_pipeline.py  zeroshot.cfg
usage_examples/ner_dolly/: README.md  dolly_ner_fewshot.cfg  examples.yml  examples_v2.yml  fewshot.cfg  fewshot_v2.cfg  run_ner_dolly_pipeline.py  run_pipeline.py  zeroshot.cfg  zeroshot_v2.cfg
usage_examples/ner_groq/: README.md  fewshot.cfg
usage_examples/ner_langchain_openai/: README.md  ner.cfg  run_pipeline.py
usage_examples/ner_minichain_openai/: README.md  ner.cfg  run_pipeline.py
usage_examples/ner_v3_openai/: README.md  examples.json  fewshot.cfg
usage_examples/ner_v3_titan/: README.md  fewshot.cfg  run_pipeline.py
usage_examples/rel_openai/: README.md  examples.jsonl  fewshot.cfg  openai_rel_fewshot.cfg  openai_rel_zeroshot.cfg  run_pipeline.py  run_rel_openai_pipeline.py  zeroshot.cfg
usage_examples/span_srl_openai/: README.md  __init__.py  examples.jsonl  fewshot.cfg  run_pipeline.py  zeroshot.cfg
usage_examples/streamlit/: openai_ner_zeroshot.cfg  streamlit_app.py
usage_examples/tests/: conftest.py  test_readme_examples.py  test_usage_examples.py
usage_examples/textcat_dolly/: README.md  examples.jsonl  fewshot.cfg  zeroshot.cfg
usage_examples/textcat_minimax/: zeroshot.cfg
usage_examples/textcat_openai/: README.md  fewshot.cfg  openai_textcat_fewshot.cfg  openai_textcat_zeroshot.cfg  run_pipeline.py  run_textcat_openai_pipeline.py  textcat_examples.yml  zeroshot.cfg
(+302 files in other folders)
