[metadata]
version = 0.2.1
description = Integrating LLMs into structured NLP pipelines
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
project_urls =
    Release notes = https://github.com/explosion/spacy-llm/releases
    Source = https://github.com/explosion/spacy-llm

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
install_requires =
    spacy>=3.5,<4.0
    jinja2

[options.entry_points]
spacy_factories =
    llm = spacy_llm.pipeline.llm:make_llm
spacy_misc =
    spacy.FewShotReader.v1 = spacy_llm.registry:fewshot_reader
    spacy.FileReader.v1 = spacy_llm.registry:file_reader

[options.extras_require]
minichain =
    minichain>=0.3,<0.4
langchain =
    langchain==0.0.191
transformers =
    torch>=1.13.1,<2.0
    transformers>=4.28.1,<5.0

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[mypy]
ignore_missing_imports = true
no_implicit_optional = true
allow_redefinition = true

[tool:pytest]
markers = 
    external: interacts with a (potentially cost-incurring) third-party API
filterwarnings =
    ignore:pkg_resources:DeprecationWarning
